// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ControlPanelNumber component renders as expected 1`] = `
<DocumentFragment>
  <div
    class="creation-view-controls-number"
  >
    <div>
      <div
        class="pf-v6-c-form__group"
        id="controlId-label"
      >
        <div
          class="pf-v6-c-form__group-label"
        >
          <label
            class="pf-v6-c-form__label"
            for="controlId"
          >
            <span
              class="pf-v6-c-form__label-text"
            >
              creation.app.name
            </span>
          </label>
            
          <span
            class="pf-v6-c-form__group-label-help"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-label="More info"
                class="pf-v6-c-button pf-m-plain pf-v6-c-form__group-label-help"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="controlId-label-help-button"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </div>
        <div
          class="pf-v6-c-form__group-control"
        >
          <div
            class="pf-v6-c-number-input"
          >
            <div
              class="pf-v6-c-input-group"
            >
              <div
                class="pf-v6-c-input-group__item"
              >
                <button
                  aria-label="Minus"
                  class="pf-v6-c-button pf-m-control"
                  data-ouia-component-id="OUIA-Generated-Button-control-:r3:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  data-testid="down-controlId"
                  id="down-controlId"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <span
                      class="pf-v6-c-number-input__icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        width="1em"
                      >
                        <svg
                          class="pf-v6-icon-default"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                          />
                        </svg>
                        <svg
                          class="pf-v6-icon-rh-ui"
                          viewBox="0 0 32 32"
                        >
                          <path
                            d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                          />
                        </svg>
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
              <div
                class="pf-v6-c-input-group__item"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Number input"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-:r5:"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    data-testid="number-controlId"
                    id="controlId"
                    name="number-input-default-name"
                    type="number"
                    value=""
                  />
                </span>
              </div>
              <div
                class="pf-v6-c-input-group__item"
              >
                <button
                  aria-label="Plus"
                  class="pf-v6-c-button pf-m-control"
                  data-ouia-component-id="OUIA-Generated-Button-control-:r6:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  data-testid="up-controlId"
                  id="up-controlId"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <span
                      class="pf-v6-c-number-input__icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        width="1em"
                      >
                        <svg
                          class="pf-v6-icon-default"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                          />
                        </svg>
                        <svg
                          class="pf-v6-icon-rh-ui"
                          viewBox="0 0 32 32"
                        >
                          <path
                            d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                          />
                        </svg>
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ControlPanelNumber component renders as expected 2`] = `
<DocumentFragment>
  <div
    class="creation-view-controls-number"
  >
    <div>
      <div
        class="pf-v6-c-form__group"
        id="controlId-label"
      >
        <div
          class="pf-v6-c-form__group-label"
        >
          <label
            class="pf-v6-c-form__label"
            for="controlId"
          >
            <span
              class="pf-v6-c-form__label-text"
            >
              creation.app.name
            </span>
          </label>
            
          <span
            class="pf-v6-c-form__group-label-help"
          >
            <div
              style="display: contents;"
            >
              <button
                aria-label="More info"
                class="pf-v6-c-button pf-m-plain pf-v6-c-form__group-label-help"
                data-ouia-component-id="OUIA-Generated-Button-plain-:r2:"
                data-ouia-component-type="PF6/Button"
                data-ouia-safe="true"
                id="controlId-label-help-button"
                type="button"
              >
                <span
                  class="pf-v6-c-button__icon"
                >
                  <svg
                    aria-hidden="true"
                    class="pf-v6-svg"
                    fill="currentColor"
                    height="1em"
                    role="img"
                    viewBox="0 0 1024 1024"
                    width="1em"
                  >
                    <path
                      d="M521.3,576 C627.5,576 713.7,502 713.7,413.7 C713.7,325.4 627.6,253.6 521.3,253.6 C366,253.6 334.5,337.7 329.2,407.2 C329.2,414.3 335.2,416 343.5,416 L445,416 C450.5,416 458,415.5 460.8,406.5 C460.8,362.6 582.9,357.1 582.9,413.6 C582.9,441.9 556.2,470.9 521.3,473 C486.4,475.1 447.3,479.8 447.3,521.7 L447.3,553.8 C447.3,570.8 456.1,576 472,576 C487.9,576 521.3,576 521.3,576 M575.3,751.3 L575.3,655.3 C575.313862,651.055109 573.620137,646.982962 570.6,644 C567.638831,640.947672 563.552355,639.247987 559.3,639.29884 L463.3,639.29884 C459.055109,639.286138 454.982962,640.979863 452,644 C448.947672,646.961169 447.247987,651.047645 447.29884,655.3 L447.29884,751.3 C447.286138,755.544891 448.979863,759.617038 452,762.6 C454.961169,765.652328 459.047645,767.352013 463.3,767.30116 L559.3,767.30116 C563.544891,767.313862 567.617038,765.620137 570.6,762.6 C573.659349,759.643612 575.360354,755.553963 575.3,751.3 M512,896 C300.2,896 128,723.9 128,512 C128,300.3 300.2,128 512,128 C723.8,128 896,300.2 896,512 C896,723.8 723.7,896 512,896 M512.1,0 C229.7,0 0,229.8 0,512 C0,794.2 229.8,1024 512.1,1024 C794.4,1024 1024,794.3 1024,512 C1024,229.7 794.4,0 512.1,0"
                    />
                  </svg>
                </span>
              </button>
            </div>
          </span>
        </div>
        <div
          class="pf-v6-c-form__group-control"
        >
          <div
            class="pf-v6-c-number-input"
          >
            <div
              class="pf-v6-c-input-group"
            >
              <div
                class="pf-v6-c-input-group__item"
              >
                <button
                  aria-label="Minus"
                  class="pf-v6-c-button pf-m-control"
                  data-ouia-component-id="OUIA-Generated-Button-control-:r3:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  data-testid="down-controlId"
                  id="down-controlId"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <span
                      class="pf-v6-c-number-input__icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        width="1em"
                      >
                        <svg
                          class="pf-v6-icon-default"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M416 208H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h384c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                          />
                        </svg>
                        <svg
                          class="pf-v6-icon-rh-ui"
                          viewBox="0 0 32 32"
                        >
                          <path
                            d="M29 17H3a1 1 0 0 1 0-2h26a1 1 0 0 1 0 2Z"
                          />
                        </svg>
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
              <div
                class="pf-v6-c-input-group__item"
              >
                <span
                  class="pf-v6-c-form-control"
                >
                  <input
                    aria-invalid="false"
                    aria-label="Number input"
                    data-ouia-component-id="OUIA-Generated-TextInputBase-:r5:"
                    data-ouia-component-type="PF6/TextInput"
                    data-ouia-safe="true"
                    data-testid="number-controlId"
                    id="controlId"
                    name="number-input-default-name"
                    type="number"
                    value="0"
                  />
                </span>
              </div>
              <div
                class="pf-v6-c-input-group__item"
              >
                <button
                  aria-label="Plus"
                  class="pf-v6-c-button pf-m-control"
                  data-ouia-component-id="OUIA-Generated-Button-control-:r6:"
                  data-ouia-component-type="PF6/Button"
                  data-ouia-safe="true"
                  data-testid="up-controlId"
                  id="up-controlId"
                  type="button"
                >
                  <span
                    class="pf-v6-c-button__icon"
                  >
                    <span
                      class="pf-v6-c-number-input__icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        width="1em"
                      >
                        <svg
                          class="pf-v6-icon-default"
                          viewBox="0 0 448 512"
                        >
                          <path
                            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
                          />
                        </svg>
                        <svg
                          class="pf-v6-icon-rh-ui"
                          viewBox="0 0 32 32"
                        >
                          <path
                            d="M29 15H17V3a1 1 0 0 0-2 0v12H3a1 1 0 0 0 0 2h12v12a1 1 0 0 0 2 0V17h12a1 1 0 0 0 0-2Z"
                          />
                        </svg>
                      </svg>
                    </span>
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            style="border-top: 1.75px solid red; padding-bottom: 6px; max-width: 400px;"
          />
          <div
            class="pf-v6-c-form__helper-text"
            id="controlId-helper"
          >
            <div
              class="pf-v6-l-split"
            >
              <div
                class="pf-v6-l-split__item pf-m-fill"
              >
                <div
                  class="pf-v6-c-helper-text"
                >
                  <div
                    class="pf-v6-c-helper-text__item pf-m-error"
                  >
                    <span
                      class="pf-v6-c-helper-text__item-icon"
                    >
                      <svg
                        aria-hidden="true"
                        class="pf-v6-svg"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        viewBox="0 0 32 32"
                        width="1em"
                      >
                        <path
                          d="M16 1C7.729 1 1 7.729 1 16s6.729 15 15 15 15-6.729 15-15S24.271 1 16 1Zm-1.5 8a1.5 1.5 0 1 1 3 0v7a1.5 1.5 0 1 1-3 0V9ZM16 25.001a2 2 0 1 1-.001-3.999A2 2 0 0 1 16 25.001Z"
                        />
                      </svg>
                    </span>
                    <span
                      class="pf-v6-c-helper-text__item-text"
                    >
                      error
                      <span
                        class="pf-v6-screen-reader"
                      >
                        : error status;
                      </span>
                    </span>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
